créattiond du fichier css et importation des images

--- a/app/Resources/views/default/test.html.twig
+++ b/app/Resources/views/default/test.html.twig
@@ -1,3 +1,24 @@
 {% block test %}
-    <h1>Je suis magnifique et très fort (votre chef de projet adoré et non à dorer)</h1>
-{% endblock %}
+    <!DOCTYPE html>
+<html>
+    <title> acceuil </title>
+    <head>
+        <link rel="stylesheet" type="text/css" href="../css/symfo.css" >
+    </head>
+    <body>
+        <div id="boite_central">
+            <div id="boite_gauche">
+                <img src="../image/Screenshot-2017-12-8%20Ynov%20-%20Connexion.png" />
+            </div>
+            <div id="boite_centre">
+            </div>
+            <div id="boite_droite">
+                <input type="text" placeholder="E-mail" />
+                <input type="password" placeholder="Mot de passe" />
+                <input type="button" value="connexion" />
+            </div>
+        </div>
+    
+    </body>
+
+</html>{% endblock %}
