--- a/app/Resources/views/default/test.html.twig
+++ b/app/Resources/views/default/test.html.twig
@@ -6,16 +6,16 @@
         <link rel="stylesheet" type="text/css" href="../css/symfo.css" >
     </head>
     <body>
-        <div id="boite_central">
+       <div id="boite_central">
             <div id="boite_gauche">
                 <img src="../image/Screenshot-2017-12-8%20Ynov%20-%20Connexion.png" />
             </div>
             <div id="boite_centre">
             </div>
             <div id="boite_droite">
-                <input type="text" placeholder="E-mail" />
-                <input type="password" placeholder="Mot de passe" />
-                <input type="button" value="connexion" />
+                <input id="email" type="text" placeholder="E-mail" />
+                <input id="mdp" type="password" placeholder="Mot de passe" />
+                <input id="connexion" type="button" value="connexion" />
             </div>
         </div>
     
