ajout des pages  ainsi que gestion des includes

--- a/app/Resources/views/barre_gauche.html.twig
+++ b/app/Resources/views/barre_gauche.html.twig
@@ -11,7 +11,8 @@
                 <p id="barre_gauche_bienvenue"> Bienvenue @user !</p>
             </div>
             <div id="barre_gauche_centre"> 
-                <div id="barre_gauche_centre_menu_principal"  class="barre_gauche_centre_menu_cliquable" href="article2.html">
+                <a class="lien" href="#">
+                <div id="barre_gauche_centre_menu_principal"  class="barre_gauche_centre_menu_cliquable" href="#">
                     <svg  viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" class="barre_gauche_svg" >
                         <g>
                            <g>
@@ -23,11 +24,12 @@
                       <path d="M442.246,232.543c-7.346,0-13.303,5.956-13.303,13.303v211.749H322.521V342.009c0-36.68-29.842-66.52-66.52-66.52    s-66.52,29.842-66.52,66.52v115.587H83.058V245.847c0-7.347-5.957-13.303-13.303-13.303s-13.303,5.956-13.303,13.303v225.053    c0,7.347,5.957,13.303,13.303,13.303h133.029c6.996,0,12.721-5.405,13.251-12.267c0.032-0.311,0.052-0.651,0.052-1.036v-128.89    c0-22.009,17.905-39.914,39.914-39.914s39.914,17.906,39.914,39.914v128.89c0,0.383,0.02,0.717,0.052,1.024    c0.524,6.867,6.251,12.279,13.251,12.279h133.029c7.347,0,13.303-5.956,13.303-13.303V245.847    C455.549,238.499,449.593,232.543,442.246,232.543z" fill="#FFFFFF"/>
                        </g>
                       </svg>
-                    <a class="lien" href="#">
-                    <p class="lien"> Menu principal</p>
-                    </a>
-                </div>
                     
+                    <p class="lien"> Menu principal</p>
+                    
+                </div>
+                </a>
+                <a class="lien" href="#">
                 <div id="barre_gauche_centre_projet" class="barre_gauche_centre_menu_cliquable">
                     <svg   viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve" class="barre_gauche_svg">
 <path d="M26.525,10.5l-4.618-6.451L21.515,3.5H0v53h60v-46H26.525z M58,12.5v5H31.536l-3.579-5H58z M2,54.5v-49h18.485l5,7h0.012  l4.69,6.551c0.195,0.272,0.501,0.417,0.813,0.418V19.5h27v35H2z" fill="#FFFFFF"/>
@@ -62,10 +64,12 @@
 <g>
 </g>
 </svg>
-                <a class="lien" href="#">
+                
                     <p class="lien"> Projets</p>
-                    </a>
+                   
                 </div>
+                    </a>
+                <a class="lien" href="#">
                 <div id="barre_gauche_centre_utilisateurs" class="barre_gauche_centre_menu_cliquable">
                     <svg class="barre_gauche_svg" viewBox="0 0 563.43 563.43" style="enable-background:new 0 0 563.43 563.43;" xml:space="preserve">
 <path d="M280.79,314.559c83.266,0,150.803-67.538,150.803-150.803S364.055,13.415,280.79,13.415S129.987,80.953,129.987,163.756  S197.524,314.559,280.79,314.559z M280.79,52.735c61.061,0,111.021,49.959,111.021,111.021S341.851,274.776,280.79,274.776  s-111.021-49.959-111.021-111.021S219.728,52.735,280.79,52.735z" fill="#FFFFFF"/>
@@ -101,10 +105,12 @@
 <g>
 </g>
 </svg>
-                     <a class="lien" href="#">
+                     
                     <p class="lien"> Utilisateurs</p>
-                    </a>
+                 
                 </div>
+                </a>
+                <a class="lien" href="#">
                 <div id="barre_gauche_centre_messagerie" class="barre_gauche_centre_menu_cliquable" >
                     <svg  viewBox="0 0 476.2 476.2" style="enable-background:new 0 0 476.2 476.2;" xml:space="preserve" class="barre_gauche_svg" >
 <g>
@@ -145,10 +151,12 @@
 </g>
 </svg>
 
-                     <a class="lien" href="#">
+                  
                     <p class="lien"> Messagerie</p>
-                    </a>
+                 
                 </div>
+                </a>
+                  <a class="lien" href="#">
                 <div id="barre_gauche_centre_entreprise" class="barre_gauche_centre_menu_cliquable">
                     <svg  viewBox="0 0 511.626 511.627" style="enable-background:new 0 0 511.626 511.627;" xml:space="preserve" class="barre_gauche_svg">
 <g>
@@ -190,10 +198,11 @@
 </g>
 </svg>
 
-                     <a class="lien" href="#">
+                     
                     <p class="lien"> Entreprise</p>
-                    </a>
                 </div>
+                 </a>
+                 <a class="lien" href="#">
                 <div id="barre_gauche_centre_logs" class="barre_gauche_centre_menu_cliquable" >
                     <svg x viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve" class="barre_gauche_svg">
 <g>
@@ -210,12 +219,12 @@
 
 </svg>
 
-                     <a class="lien" href="#">
+                     
                     <p class="lien"> Logs</p>
-                    </a>
                 </div>
             </div>
-                
+              </a>
+               <a class="lien" href="#">
              <div id="barre_gauche_bas"> 
                  <svg  viewBox="0 0 56 56" style="enable-background:new 0 0 56 56;" xml:space="preserve" class="barre_gauche_svg" >
 <g>
@@ -226,6 +235,7 @@
 </svg>
                 <p id="barre_gauche_deconnecter"> Se déconnecter</p>
              </div>
+             </a>
         </div>
         
         
