finalisation des pages

--- a/app/Resources/views/default/barre_gauche.html.twig
+++ b/app/Resources/views/default/barre_gauche.html.twig
@@ -8,7 +8,8 @@
     <body id="body_barre_gauche">
         <div id="barre_gauche"> 
             <div id="barre_gauche_haut"> 
-                <p id="barre_gauche_bienvenue"> Bienvenue @user !</p>
+                <p id="barre_gauche_bienvenue"> Bienvenue</p>
+                 <p> @user ! </p>
             </div>
             <div id="barre_gauche_centre"> 
                 <a class="lien" href="#">
