--- a/app/Resources/views/default/header.html.twig
+++ b/app/Resources/views/default/header.html.twig
@@ -4,16 +4,17 @@
     <title> acceuil </title>
     <head>
         <link rel="stylesheet" type="text/css" href="../css/symfo.css" >
+        <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet"> 
     </head>
     <body id="body_header"> 
         <div id="header">
             <div id="gauche_header">
-                <p id="nom_page"> Projets </p>
+                <p class="nom_page"> Projets </p>
                 <p id="chemin"> Projets  > Knooker  > Modifications </p>
             </div>
             <div id="centre_header"></div>
              <div id="droite_header">
-                 <img src="../image/logo_ynov2.png" title="image_ynov_ydays" alt="logo de ynov Ydays"  />
+                 <img id="image_ynov" src="../image/logo_ynov2.png" title="image_ynov_ydays" alt="logo de ynov Ydays"  />
             </div>
         </div>
     </body>
