--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -8,7 +8,7 @@
     <body id="body_header"> 
         <div id="header">
             <div id="gauche_header">
-                <p id="nom_page"> Projets </p>
+                <p class="nom_page"> Projets </p>
                 <p id="chemin"> Projets  > Knooker  > Modifications </p>
             </div>
             <div id="centre_header"></div>
