Juste pour le plaisir de commit

--- a/app/Resources/views/default/accueil.html.twig
+++ b/app/Resources/views/default/accueil.html.twig
@@ -1,4 +1,4 @@
-{% if app.user %}
+{# {% if app.user %}
 	<p>Yo {{ app.user.username }}</p>
 {% endif %}
 
@@ -10,8 +10,10 @@
 	<p>Bravo, tu es un simple utilisateur</p>
 {% else %}
 	<p>Tu sers a rien</p>
-{% endif %}
-
+{% endif %} #}
+{{ form_start(form, {'attr': {'class': 'my-form-class'} }) }}
+    {{ form_widget(form) }}
+{{ form_end(form) }}
 
 <a href="/logout">Se déconnecter</a>
 
