commit pour pierre <3

--- a/app/Resources/views/utilisateur/show.html.twig
+++ b/app/Resources/views/utilisateur/show.html.twig
@@ -10,6 +10,14 @@
                 <td>{{ utilisateur.id }}</td>
             </tr>
             <tr>
+                <th>Identifiant</th>
+                <td>{{ utilisateur.username }}</td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>{{ utilisateur.email }}</td>
+            </tr>
+            <tr>
                 <th>Nom</th>
                 <td>{{ utilisateur.nom }}</td>
             </tr>
