ajustement de la page accueuil

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -13,7 +13,7 @@
             </div>
             <div id="centre_header"></div>
              <div id="droite_header">
-                 <img src="../image/logo_ynov2.png" title="image_ynov_ydays" alt="logo de ynov Ydays"  />
+                 <img id="image_header" src="../image/logo_ynov2.png" title="image_ynov_ydays" alt="logo de ynov Ydays"  />
             </div>
         </div>
     </body>
