--- a/app/Resources/views/default/alertedelete.hmtl.twig
+++ b/app/Resources/views/default/alertedelete.hmtl.twig
@@ -5,23 +5,24 @@
     <head>
         <link rel="stylesheet" type="text/css" href="../css/symfo.css" >
     </head>
-    <body>  
+     <body> 
     <div id="alerte">
         <div id="alerte_haut">
-             <p id="gros_titre_alerte">Confirmations de modifications </p>
-             <p id="moyen_titre_alerte">Voulez-vous confirmer les modifications apportées a ce projet ?</p> 
-             <p id="petit_titre_alerte"> cette action écrasera les précédentes données.</p> 
+             <p id="gros_titre_alerte2">Attention </p>
+             <p id="moyen_titre_alerte2">Voulez-vous confirmer la suppresion de ce projet ?</p> 
+             <p id="petit_titre_alerte2"> cette action est irréversible, toute les données relatives à se projet seront supprimées, et tout les membres / entreprise liés à ce projet seront classés dans la catégorie "sans projets".</p> 
         </div>
         <div id="alerte_bas">
             <div id="alerte_enregistrer">
-                <svg class="svg_alerte" viewBox="0 0 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve">
+            <svg class="svg_alerte" viewBox="0 0 475.2 475.2" style="enable-background:new 0 0 475.2 475.2;" xml:space="preserve" width="512px" height="512px">
 <g>
-    <g id="check-circle-outline">
-        <path d="M150.45,206.55l-35.7,35.7L229.5,357l255-255l-35.7-35.7L229.5,285.6L150.45,206.55z M459,255c0,112.2-91.8,204-204,204    S51,367.2,51,255S142.8,51,255,51c20.4,0,38.25,2.55,56.1,7.65l40.801-40.8C321.3,7.65,288.15,0,255,0C114.75,0,0,114.75,0,255    s114.75,255,255,255s255-114.75,255-255H459z" fill="#91DC5A"/>
-    
+  <g>
+    <path d="M405.6,69.6C360.7,24.7,301.1,0,237.6,0s-123.1,24.7-168,69.6S0,174.1,0,237.6s24.7,123.1,69.6,168s104.5,69.6,168,69.6    s123.1-24.7,168-69.6s69.6-104.5,69.6-168S450.5,114.5,405.6,69.6z M386.5,386.5c-39.8,39.8-92.7,61.7-148.9,61.7    s-109.1-21.9-148.9-61.7c-82.1-82.1-82.1-215.7,0-297.8C128.5,48.9,181.4,27,237.6,27s109.1,21.9,148.9,61.7    C468.6,170.8,468.6,304.4,386.5,386.5z" fill="#ec4363"/>
+    <path d="M342.3,132.9c-5.3-5.3-13.8-5.3-19.1,0l-85.6,85.6L152,132.9c-5.3-5.3-13.8-5.3-19.1,0c-5.3,5.3-5.3,13.8,0,19.1    l85.6,85.6l-85.6,85.6c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4l85.6-85.6l85.6,85.6c2.6,2.6,6.1,4,9.5,4    c3.5,0,6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1l-85.4-85.6l85.6-85.6C347.6,146.7,347.6,138.2,342.3,132.9z" fill="#ec4363"/>
+
 </svg>
 
-            <p id="ok_alerte">  les modifications
+            <p id="supprimer_alerte">supprimer projet
             </p>
             </div>
                 <div id="annuler">
