--- a/web/css/symfo.css
+++ b/web/css/symfo.css
@@ -406,6 +406,7 @@
     font-size: 30px;
     color: #EC4363;
     font-weight: bold;
+    padding-top: 2%;
     
 }
 
@@ -417,7 +418,7 @@
 
 #petit_titre_alerte2
 {
-    padding: 10px;
+    padding: 12px;
     font-size: 15px;
      color: #AD0A2A;
 }
