ajout du style, des changements de fosUSer etc

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,10 +4,25 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
+         <link rel="stylesheet" type="text/css" href="../css/style_left_nav.css"> 
+         <link rel="stylesheet" type="text/css" href="../css/style_top_nav.css"> 
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div id="site_navbar">
+            {% include "left_nav.html.twig" %}
+            <div id="site_workspace">
+            <div id="site_header">
+                {% include "top_nav.html.twig" %}
+            </div>
+            <div id="workspace">
+                {% block body %}{% endblock %}
+            </div>
+        </div>
+        </div>
+        
+    </div>
+        
         {% block javascripts %}{% endblock %}
     </body>
 </html>
