--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -3,22 +3,19 @@
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-    <form action="{{ path("fos_user_security_check") }}" method="post" class="form-signin">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-        <div class="login-container">
-            <h1>Login to Your Account</h1><br>
-            <form>
-                <label for="username">{{ 'security.login.username'|trans }}</label>
-                <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
-                <label for="password">{{ 'security.login.password'|trans }}</label>
-                <input type="password" id="password" name="_password" required="required" />
-                <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-                <input type="submit" class="login login-submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-            </form>
-            <div class="login-help">
-                <!--<a href="{{ path('fos_user_registration_register') }}">Inscription</a> - --><a href="{{ path('fos_user_resetting_request') }}">Mot de passe oublié</a>
-            </div>
+    <div id="conteneur_login">
+        <div id="left_login">
+            <img src="{{ asset('image/logo_ynov.png') }}">
+            <p>Connexion</p>
         </div>
-    </form>
+        <div id="center_login">
+        </div>
+        <form id="right_login" action="{{ path("fos_user_security_check") }}" method="post" >
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+            <input type="text" id="username" name="_username" placeholder="{{ 'security.login.username'|trans }}" required="required" value="{{ last_username }}" />
+            <input type="password" id="password" name="_password" placeholder="{{ 'security.login.password'|trans }}" required="required" />
+
+            <input type="submit" class="hvr-fade login login-submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+        </form>
+    </div>
 {% endblock fos_user_content %}
