--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -7,81 +7,99 @@
 </head>
 <body>
 <style>
-    @import url(http://fonts.googleapis.com/css?family=Roboto);
-    /****** LOGIN ******/
-    .login-container {
-        padding: 30px;
-        max-width: 350px;
-        width: 100% !important;
-        background-color: #F7F7F7;
-        margin: 100px auto;
-        border-radius: 2px;
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-        overflow: hidden;
-        font-family: roboto;
-    }
-    .login-container h1 {
-        text-align: center;
-        font-size: 1.8em;
-        font-family: roboto;
-    }
-    .login-container input[type=submit] {
-        width: 100%;
-        display: block;
-        margin-bottom: 10px;
-        position: relative;
-    }
-    .login-container input[type=text], input[type=password] {
-        height: 44px;
-        font-size: 16px;
-        width: 100%;
-        margin-bottom: 10px;
-        -webkit-appearance: none;
-        background: #fff;
-        border: 1px solid #d9d9d9;
-        border-top: 1px solid #c0c0c0;
-        /* border-radius: 2px; */
-        padding: 0 8px;
-        box-sizing: border-box;
-        -moz-box-sizing: border-box;
-    }
-    .login-container input[type=text]:hover, input[type=password]:hover {
-        border: 1px solid #b9b9b9;
-        border-top: 1px solid #a0a0a0;
-        -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-        -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-        box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-    }
-    .login-submit {
-        /* border: 1px solid #3079ed; */
-        border: 0px;
-        color: #fff;
-        text-shadow: 0 1px rgba(0,0,0,0.1);
-        background-color: #4d90fe;
-        padding: 17px 0px;
-        font-family: roboto;
-        font-size: 14px;
-        /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
-    }
-    .login-submit:hover {
-        /* border: 1px solid #2f5bb7; */
-        border: 0px;
-        text-shadow: 0 1px rgba(0,0,0,0.3);
-        background-color: #357ae8;
-        /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
-    }
-    .login-container a {
-        text-decoration: none;
-        color: #666;
-        font-weight: 400;
-        text-align: center;
-        display: inline-block;
-        opacity: 0.6;
-        transition: opacity ease 0.5s;
-    }
-    .login-help{
-        font-size: 12px;
-    }
+    * {
+    font-family: 'Lato', sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
+
+#conteneur_login {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#left_login,
+#center_login,
+#right_login {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
+
+#left_login img {
+    width: 300px;
+}
+
+#left_login {
+    align-items: flex-end;
+    margin: 0px 10px;
+}
+
+#left_login p {
+    align-items: flex-end;
+    color: #95989A;
+    font-size: 22px;
+    font-weight: 400;
+    margin: 0px 20px 0px 0px;
+}
+
+#center_login {
+    width: 2px;
+    height: 220px;
+    background-color: #BEBEBE;
+}
+
+#right_login {
+    margin-top: 40px;
+    align-items: flex-end;
+}
+
+#username,
+#password {
+    width: 250px;
+    height: 30px;
+    border-radius: 5px;
+    border: solid 2px #BEBEBE;
+    padding: 5px 15px 5px 15px;
+    margin: 5px;
+}
+
+#_submit {
+    width: 100px;
+    height: 30px;
+    font-weight: bold;
+    font-size: 12px;
+    color: #FFFFFF;
+    background-color: #00AE9C;
+    border: 0px;
+    border-radius: 6px;
+    margin: 5px;
+}
+
+/* Fade */
+.hvr-fade {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    overflow: hidden;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: color, background-color;
+    transition-property: color, background-color;
+}
+.hvr-fade:hover,
+.hvr-fade:focus,
+.hvr-fade:active {
+    background-color: #008B7D;
+    color: white;
+    cursor: pointer;
+}
 </style>
 {% for type, messages in app.session.flashBag.all %}
     {% for message in messages %}
